--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: ./.github/actions/docker-build-push
 
         with:
-          image_name: rajbdocker/demo-py
+          image_name: rajbdocker/demo-ecom
           tag: latest
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
