--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: ./.github/actions/docker-build-push
+      - uses: ./.github/actions/docker-build-push/action.yml
 
         with:
           image_name: rajbdocker/demo-ecom
